--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Long Haul
+title: Logbeats
 description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
-url: http://long-haul.netlify.app
+url: https://logbeats.github.io/
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
 
