--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ navigation:
     url: /contact
 
 social:
-  github: brianmaierjr
-  twitter: brianmaierjr
-  facebook: brianmaierjr
-  email: brimaidesigns@gmail.com
-  linkedin: brianmaierjr
+  github: Logbeats
+  twitter: Logbeats
+  facebook: Logbeats
+  email: slaydteam@gmail.com
+  linkedin: Logbeats
 
 google_analytics: "UA-58263416-1"
 
 disqus:
-    shortname: brianmaierjr
+    shortname: Logbeats
