--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Logbeats
 description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
-url: https://logbeats.github.io/
+url: https://logbeats.co.kr
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
 
@@ -10,7 +10,7 @@ permalink: blog/:title/
 
 markdown: kramdown
 highlighter: rouge
-plugins: [jekyll-paginate]
+plugins: [jekyll-paginate, hexo-generator-cname]
 paginate: 5
 
 navigation:
