--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Logbeats
-description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
+title: logbeats
+description: logbeats project
 
-url: https://logbeats.github.io/
+url: https://www.logbeats.co.kr/
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
 
@@ -22,13 +22,13 @@ navigation:
     url: /contact
 
 social:
-  github: Logbeats
-  twitter: Logbeats
-  facebook: Logbeats
+  github: logbeats
+  twitter: logbeats
+  facebook: logbeats
   email: slaydteam@gmail.com
-  linkedin: Logbeats
+  linkedin: logbeats
 
 google_analytics: "UA-58263416-1"
 
 disqus:
-    shortname: Logbeats
+    shortname: logbeats
