--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ navigation:
     url: /index.html
   - title: About
     url: /about
-  - title: Contact
+  - title: test
     url: /contact
 
 social:
