--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ social:
   email: slaydteam@gmail.com
   linkedin: logbeats
 
-google_analytics: "UA-58263416-1"
+google_analytics: "G-JCM8YCZ15Z"
 
 disqus:
     shortname: logbeats
